fix target link error

--- a/Model/CMakeLists.txt
+++ b/Model/CMakeLists.txt
@@ -23,8 +23,9 @@ MESSAGE(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     target_link_libraries(${TARGET} GL GLU)
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -framework OpenGL")
-    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -framework CoreFoundation")
+    FIND_LIBRARY(COREFOUNDATION_LIBRARY NAMES CoreFoundation)
+    FIND_LIBRARY(OPENGL_LIBRARY NAMES OpenGL)
+    target_link_libraries(${TARGET} ${COREFOUNDATION_LIBRARY} ${OPENGL_LIBRARY})
     set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -D__APPLE__")
     MESSAGE("${CMAKE_CXX_FLAGS}")
 endif()
